@@ -1,18 +1,20 @@
 package org.apache.lucene.facet.taxonomy.directory;
 
+import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.apache.lucene.facet.taxonomy.CategoryPath;
+import org.apache.lucene.facet.taxonomy.InconsistentTaxonomyException;
+import org.apache.lucene.facet.taxonomy.writercache.TaxonomyWriterCache;
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.IndexWriterConfig;
 import org.apache.lucene.index.IndexWriterConfig.OpenMode;
 import org.apache.lucene.store.AlreadyClosedException;
 import org.apache.lucene.store.Directory;
-import org.junit.Test;
-
 import org.apache.lucene.util.LuceneTestCase;
-import org.apache.lucene.facet.taxonomy.CategoryPath;
-import org.apache.lucene.facet.taxonomy.directory.DirectoryTaxonomyWriter;
-import org.apache.lucene.facet.taxonomy.writercache.TaxonomyWriterCache;
+import org.junit.Test;
 
 /**
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -67,23 +69,38 @@ public class TestDirectoryTaxonomyWriter extends LuceneTestCase {
   
   @Test
   public void testCommitUserData() throws Exception {
-    // Verifies that committed data is retrievable
+    // Verifies taxonomy commit data
     Directory dir = newDirectory();
-    DirectoryTaxonomyWriter ltw = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
-    assertFalse(IndexReader.indexExists(dir));
-    ltw.commit(); // first commit, so that an index will be created
-    ltw.addCategory(new CategoryPath("a"));
-    ltw.addCategory(new CategoryPath("b"));
+    DirectoryTaxonomyWriter taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
+    taxoWriter.addCategory(new CategoryPath("a"));
+    taxoWriter.addCategory(new CategoryPath("b"));
     Map <String, String> userCommitData = new HashMap<String, String>();
     userCommitData.put("testing", "1 2 3");
-    ltw.commit(userCommitData);
-    ltw.close();
+    taxoWriter.commit(userCommitData);
+    taxoWriter.close();
     IndexReader r = IndexReader.open(dir);
     assertEquals("2 categories plus root should have been committed to the underlying directory", 3, r.numDocs());
     Map <String, String> readUserCommitData = r.getIndexCommit().getUserData();
     assertTrue("wrong value extracted from commit data", 
         "1 2 3".equals(readUserCommitData.get("testing")));
+    assertNotNull("index.create.time not found in commitData", readUserCommitData.get(DirectoryTaxonomyWriter.INDEX_CREATE_TIME));
     r.close();
+    
+    // open DirTaxoWriter again and commit, INDEX_CREATE_TIME should still exist
+    // in the commit data, otherwise DirTaxoReader.refresh() might not detect
+    // that the taxonomy index has been recreated.
+    taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
+    taxoWriter.addCategory(new CategoryPath("c")); // add a category so that commit will happen
+    taxoWriter.commit(new HashMap<String, String>(){{
+      put("just", "data");
+    }});
+    taxoWriter.close();
+    
+    r = IndexReader.open(dir);
+    readUserCommitData = r.getIndexCommit().getUserData();
+    assertNotNull("index.create.time not found in commitData", readUserCommitData.get(DirectoryTaxonomyWriter.INDEX_CREATE_TIME));
+    r.close();
+    
     dir.close();
   }
   
@@ -115,6 +132,72 @@ public class TestDirectoryTaxonomyWriter extends LuceneTestCase {
     } catch (AlreadyClosedException e) {
       // expected
     }
+    dir.close();
+  }
+
+  private void touchTaxo(DirectoryTaxonomyWriter taxoWriter, CategoryPath cp) throws IOException {
+    taxoWriter.addCategory(cp);
+    taxoWriter.commit(new HashMap<String, String>(){{
+      put("just", "data");
+    }});
+  }
+  
+  @Test
+  public void testRecreateAndRefresh() throws Exception {
+    // DirTaxoWriter lost the INDEX_CREATE_TIME property if it was opened in
+    // CREATE_OR_APPEND (or commit(userData) called twice), which could lead to
+    // DirTaxoReader succeeding to refresh().
+    Directory dir = newDirectory();
+    
+    DirectoryTaxonomyWriter taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
+    touchTaxo(taxoWriter, new CategoryPath("a"));
+    
+    DirectoryTaxonomyReader taxoReader = new DirectoryTaxonomyReader(dir);
+
+    touchTaxo(taxoWriter, new CategoryPath("b"));
+    
+    // this should not fail
+    taxoReader.refresh();
+
+    // now recreate the taxonomy, and check that the timestamp is preserved after opening DirTW again.
+    taxoWriter.close();
+    taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE, new NoOpCache());
+    touchTaxo(taxoWriter, new CategoryPath("c"));
+    taxoWriter.close();
+    
+    taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
+    touchTaxo(taxoWriter, new CategoryPath("d"));
+    taxoWriter.close();
+
+    // this should fail
+    try {
+      taxoReader.refresh();
+      fail("IconsistentTaxonomyException should have been thrown");
+    } catch (InconsistentTaxonomyException e) {
+      // ok, expected
+    }
+    
+    taxoReader.close();
+    dir.close();
+  }
+
+  @Test
+  public void testUndefinedCreateTime() throws Exception {
+    // tests that if the taxonomy index doesn't have the INDEX_CREATE_TIME
+    // property (supports pre-3.6 indexes), all still works.
+    Directory dir = newDirectory();
+    
+    // create an empty index first, so that DirTaxoWriter initializes createTime to null.
+    new IndexWriter(dir, new IndexWriterConfig(TEST_VERSION_CURRENT, null)).close();
+    
+    DirectoryTaxonomyWriter taxoWriter = new DirectoryTaxonomyWriter(dir, OpenMode.CREATE_OR_APPEND, new NoOpCache());
+    // we cannot commit null keys/values, this ensures that if DirTW.createTime is null, we can still commit.
+    taxoWriter.close();
+    
+    DirectoryTaxonomyReader taxoReader = new DirectoryTaxonomyReader(dir);
+    taxoReader.refresh();
+    taxoReader.close();
+    
     dir.close();
   }
   
